src/snapshots/blog__snapshot@2019__09__30__Security-advisory-for-cargo.html.snap
---
source: src/lib.rs
expression: content
input_file: site/2019/09/30/Security-advisory-for-cargo.html
snapshot_kind: text
---
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>Security advisory for Cargo | Rust Blog</title>
    <meta name="viewport" content="width=device-width,initial-scale=1.0">
<meta name="description" content="Empowering everyone to build reliable and efficient software.">
     <!-- Twitter card -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@rustlang">
     <meta name="twitter:creator" content="@rustlang">
     <meta name="twitter:title" content="Security advisory for Cargo | Rust Blog">
     <meta name="twitter:description" content="Empowering everyone to build reliable and efficient software.">
    <meta name="twitter:image" content="https://www.rust-lang.org/static/images/rust-social.jpg">
    
    <!-- Facebook OpenGraph -->
    <meta property="og:title" content="Security advisory for Cargo | Rust Blog" />
    <meta property="og:description" content="Empowering everyone to build reliable and efficient software.">
    <meta property="og:image" content="https://www.rust-lang.org/static/images/rust-social-wide.jpg" />
    <meta property="og:type" content="website" />
    <meta property="og:locale" content="en_US" />
    
    <!-- styles -->
    <link rel="stylesheet" href="../../../styles/vendor.css"/>
    <link rel="stylesheet" href="../../../styles/fonts.css"/>
    <link rel="stylesheet" href="../../../styles/app.css"/>
    <link rel="stylesheet" href="../../../styles/highlight.css"/>
    
    <!-- stylesheet for user agents without js -->
    <noscript>
        <link rel="stylesheet" href="../../../styles/noscript.css">
    </noscript>
    
    <!-- favicon -->
    <link rel="apple-touch-icon" sizes="180x180" href="../../../images/apple-touch-icon.png">
    <link rel="icon" type="image/png" sizes="16x16" href="../../../images/favicon-16x16.png">
    <link rel="icon" type="image/png" sizes="32x32" href="../../../images/favicon-32x32.png">
    <link rel="icon" type="image/svg+xml" href="../../../images/favicon.svg">
    <link rel="manifest" href="../../../images/site.webmanifest">
    <link rel="mask-icon" href="../../../images/safari-pinned-tab.svg" color="#5bbad5">
    <meta name="msapplication-TileColor" content="#00aba9">
    <meta name="theme-color" content="#ffffff">
    
     <!-- atom -->
     <link type="application/atom+xml" rel="alternate" href="https://blog.rust-lang.org/feed.xml" title="Rust Blog" />
    
    <!-- theme switcher -->
    <script src="../../../scripts/theme-switch.js"></script>
  </head>
  <body>
    <nav class="flex flex-row justify-center justify-end-l items-center flex-wrap ph2 pl3-ns pr4-ns">
      <div class="brand flex-auto w-100 w-auto-l self-start tc tl-l">
        <a href="../../../">
          <img class="v-mid ml0-l rust-logo" alt="Rust Logo" src="../../../images/rust-logo-blk.svg">
          <span class="dib ml1 ml0-l">Rust Blog</span>
        </a>
      </div>
    
      <ul class="nav list w-100 w-auto-l flex flex-none flex-row flex-wrap justify-center justify-end-l items-center pv2 ph0 ph4-ns">
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org">Rust</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/tools/install">Install</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/learn">Learn</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/tools">Tools</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/governance">Governance</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/community">Community</a></li>
        <button class="theme-icon" onclick="dropdown();">🖌
          <ul id="theme-choice">
            <li class="theme-item" onclick="changeThemeTo('light');">Light</li>
            <li class="theme-item" onclick="changeThemeTo('dark');">Dark</li>
            <li class="theme-item" onclick="changeThemeTo('system');">System</li>
          </ul>
        </button>
        <script src="../../../scripts/theme-switch-post.js"></script>
      </ul>
    </nav>
<section id="Security advisory for Cargo" class="white">
  <div class="w-100 mw-none ph3 mw8-m mw8-l center f3">
    <header>
      <h2>Security advisory for Cargo</h2>
      <div class="highlight mt2 mb3"></div>
    </header>

    <div class="publish-date-author">Sept. 30, 2019 &middot; The Rust Security Team
    
    </div>

    <div class="post">
      <blockquote>
<p><strong>Note</strong>: This is a cross-post of the <a href="https://groups.google.com/forum/#!topic/rustlang-security-announcements/rVQ5e3TDnpQ">official security advisory</a>. The official
post contains a signed version with our PGP key, as well.</p>
</blockquote>
<p>The Rust team was recently notified of a security concern when using older versions of Cargo to build crates which use the package rename feature added in newer versions of Cargo. If you're using Rust 1.26.0, released on 2018-05-10, or later you're not affected.</p>
<p>The CVE for this vulnerability is <a href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2019-16760">CVE-2019-16760</a>.</p>
<h2><a href="#overview" aria-hidden="true" class="anchor" id="overview"></a>Overview</h2>
<p>Cargo can be configured through <code>Cargo.toml</code> and the <code>[dependencies]</code> section to depend on different crates, such as those from crates.io. There are multiple ways to configure how you depend on crates as well, for example if you depend on <code>serde</code> and enable the <code>derive</code> feature it would look like:</p>
<pre><code class="language-toml">serde = { version = &quot;1.0&quot;, features = ['derive'] }
</code></pre>
<p>Rust 1.31.0 <a href="https://blog.rust-lang.org/2018/12/06/Rust-1.31-and-rust-2018.html#cargo-features">introduced a new feature of Cargo</a> where one of the optional keys you can specify in this map is <code>package</code>, a way to <a href="https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#renaming-dependencies-in-cargotoml">rename a crate locally</a>. For example if you preferred to use <code>serde1</code> locally instead of <code>serde</code>, you could write:</p>
<pre><code class="language-toml">serde1 = { version = &quot;1.0&quot;, features = ['derive'], package = &quot;serde&quot; }
</code></pre>
<p>It's the addition of the <code>package</code> key that causes Cargo to compile the crate differently. This feature was <a href="https://github.com/rust-lang/cargo/pull/4953">first implemented</a> in Rust 1.26.0, but it was unstable at the time. For Rust 1.25.0 and prior, however, Cargo would ignore the <code>package</code> key and interpret the dependency line as if it were:</p>
<pre><code class="language-toml">serde1 = { version = &quot;1.0&quot;, features = ['derive'] }
</code></pre>
<p>This means when compiled with Rust 1.25.0 and prior then it would attempt to download the <code>serde1</code> crate. A malicious user could squat the <code>serde1</code> name on crates.io to look like <code>serde 1.0.0</code> but instead act maliciously when built.</p>
<p>In summary, usage of the <code>package</code> key to rename dependencies in <code>Cargo.toml</code> is ignored in Rust 1.25.0 and prior. When Rust 1.25.0 and prior is used Cargo will ignore <code>package</code> and download the wrong dependency, which could be squatted on crates.io to be a malicious package. This not only affects manifests that you write locally yourself, but also manifests published to crates.io. If you published a crate, for example, that depends on <code>serde1</code> to crates.io then users who depend on you may also be vulnerable if they use Rust 1.25.0 and prior.</p>
<h2><a href="#affected-versions" aria-hidden="true" class="anchor" id="affected-versions"></a>Affected Versions</h2>
<p>Rust 1.0.0 through Rust 1.25.0 is affected by this advisory because Cargo will ignore the <code>package</code> key in manifests. Rust 1.26.0 through Rust 1.30.0 are not affected and typically will emit an error because the <code>package</code> key is unstable. Rust 1.31.0 and after are not affected because Cargo understands the <code>package</code> key.</p>
<p>In terms of Cargo versions, this affects Cargo up through Cargo 0.26.0. All future versions of Cargo are unaffected.</p>
<h2><a href="#mitigations" aria-hidden="true" class="anchor" id="mitigations"></a>Mitigations</h2>
<p>We strongly recommend that users of the affected versions update their compiler to the latest available one. Preventing this issue from happening requires updating your compiler to either Rust 1.26.0 or newer.</p>
<p>We will not be issuing a patch release for Rust versions prior to 1.26.0. Users of Rust 1.19.0 to Rust 1.25.0 can instead apply <a href="https://gist.github.com/pietroalbini/0d293b24a44babbeb6187e06eebd4992">the provided patches</a> to mitigate the issue.</p>
<p>An audit of existing crates published to crates.io using the <code>package</code> key has been performed and there is no evidence that this vulnerability has been exploited in the wild. Our audit only covers the crates currently published on crates.io: if you notice crates exploiting this vulnerability in the future please don't hesitate to email security@rust-lang.org in accordance with <a href="https://www.rust-lang.org/policies/security">our security policy</a>.</p>
<h2><a href="#timeline-of-events" aria-hidden="true" class="anchor" id="timeline-of-events"></a>Timeline of events</h2>
<ul>
<li>Wed, Sep 18, 2019 at 13:54 UTC - Bug reported to security@rust-lang.org</li>
<li>Wed, Sep 18, 2019 at 15:35 UTC - Response confirming the report</li>
<li>Wed, Sep 18, 2019 - Cargo, Core, and crates.io teams confer on how best to handle this</li>
<li>Thu, Sep 19, 2019 - Confirmed with Elichai plan of action and continued to audit existing crates</li>
<li>Mon, Sep 23, 2019 - Advisory drafted, patches developed, audit completed</li>
<li>Mon, Sep 30, 2019 - Advisory published, security list informed of this issue</li>
</ul>
<h2><a href="#acknowledgments" aria-hidden="true" class="anchor" id="acknowledgments"></a>Acknowledgments</h2>
<p>Thanks to Elichai Turkel, who found this bug and reported it to us in accordance
with our <a href="https://www.rust-lang.org/policies/security">security policy</a>.</p>

    </div>
  </div>
</section>
    <footer>
      <div class="w-100 mw-none ph3 mw8-m mw9-l center f3">
        <div class="row">
          <div class="four columns mt3 mt0-l" id="get-help">
            <h4>Get help!</h4>
            <ul>
              <li><a href="https://doc.rust-lang.org" target="_blank" rel="noopener">Documentation</a></li>
              <li><a href="mailto:core-team@rust-lang.org">Contact the Rust Team</a></li>
            </ul>
          </div>
          <div class="four columns mt3 mt0-l">
            <h4>Terms and policies</h4>
            <ul>
              <li><a href="https://www.rust-lang.org/policies/code-of-conduct">Code of Conduct</a></li>
              <li><a href="https://www.rust-lang.org/policies/licenses">Licenses</a></li>
              <li><a href="https://www.rust-lang.org/policies/media-guide">Logo Policy and Media Guide</a></li>
              <li><a href="https://www.rust-lang.org/policies/security">Security Disclosures</a></li>
              <li><a href="https://www.rust-lang.org/policies">All Policies</a></li>
            </ul>
          </div>
          <div class="four columns mt3 mt0-l">
            <h4>Social</h4>
            <div class="flex flex-row flex-wrap">
              <a rel="me" href="https://social.rust-lang.org/@rust" target="_blank" rel="noopener" alt="mastodon link"><img src="../../../images/mastodon.svg" alt="mastodon logo" title="Mastodon"/></a>
              <a href="https://twitter.com/rustlang" target="_blank" rel="noopener" alt="twitter link"><img src="../../../images/twitter.svg" alt="twitter logo" title="Twitter"/></a>
              <a href="https://www.youtube.com/channel/UCaYhcUwRBNscFNUKTjgPFiA" target="_blank" rel="noopener" alt="youtube link"><img style="padding-top: 6px; padding-bottom:6px" src="../../../images/youtube.svg" alt="youtube logo" title="YouTube"/></a>
              <a href="https://discord.gg/rust-lang" target="_blank" rel="noopener" alt="discord link"><img src="../../../images/discord.svg" alt="discord logo" title="Discord"/></a>
              <a href="https://github.com/rust-lang" target="_blank" rel="noopener" alt="github link"><img src="../../../images/github.svg" alt="github logo" title="GitHub"/></a>
            </div>
            <h4 class="mt4 mb3">RSS</h4>
            <ul>
              <li><a href="../../../feed.xml">Main Blog</a></li>
              <li><a href="../../../inside-rust/feed.xml">"Inside Rust" Blog</a></li>
            </ul>
          </div>
    
        </div>
        <div class="attribution">
          Maintained by the Rust Team. See a typo?
          <a href="https://github.com/rust-lang/blog.rust-lang.org" target="_blank" rel="noopener">Send a fix here</a>!
        </div>
      </div>
    </footer>
    
    <!-- scripts -->
    <script src="../../../scripts/highlight.js"></script>
  </body>
</html>
